# ClassicML

./: ClassicML.sln  LICENSE.txt  README.md
ClassicML/: CMakeLists.txt  ClassicML.h  ClassicML.vcxproj  ClassicML.vcxproj.filters  KnnClassifier.cpp  KnnRegression.cpp  LinearRegression.cpp  LogisticRegression.cpp  Untitled-1.py  bindings.cpp  errors.cpp  fit.cpp  fit.h  macros.h  main.cpp  matrix.cpp  matrix.h  matrix_operations.cpp  matrix_operations.h  matrxop.h  models.cpp  models.h  optimization.cpp  optimization.h  preprocessor.cpp  preprocessor.h  pyproject.toml  setup.py  test.py  test_all_methods.ipynb
ClassicML/ClassicML/: __init__.py  _classicml.cp310-win_amd64.pyd
ClassicML/classicml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ClassicML/include/: ClassicML.h
ClassicML/include/ClassicML/: errors.h  expr.h  macros.h  matrix.h  matrxop.h  models.h  optimization.h  preprocessor.h
ClassicML/src/: errors.cpp  main.cpp  matrix.cpp  models.cpp  optimization.cpp  preprocessor.cpp
ClassicML/src/classicml.egg-info/: PKG-INFO  SOURCES.txt
ClassicML/src/models/: KMeans.cpp  KnnClassifier.cpp  KnnRegression.cpp  LinearRegression.cpp  LogisticRegression.cpp
ClassicML/vcpkg-master/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  classicml.sln  classicml.vcxproj  classicml.vcxproj.filters  cmake_install.cmake
test_all_methods/: test_all_methods.ipynb  test_opt-1.ipynb
