[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.15",
    "pybind11>=2.10.0",
    "numpy>=1.19.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "classicml"
version = "1.0.0"
description = "Machine Learning library from scratch in C++"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Dmitry", email = "dmitry.karakeshishyan@yandex.ru"}
]
keywords = ["machine learning", "ml", "classification", "regression", "knn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.19.0"
]

[project.urls]
Homepage = "https://github.com/dmitry798/classicml"
Repository = "https://github.com/dmitry798/classicml"

